feat: add basic auth and jwt authorization
